# Final-Project

./: README.md  chat_app.sql
ChatFinalProject/: CMakeLists.txt  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerwindow.cpp  registerwindow.h  registerwindow.ui
ServerMonitor/: ServerMonitor.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tcpclient.cpp  tcpclient.h
